# Shemodogan

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md
docs/: README.md  shd_core.md  shd_num.md
docs/mem/: README.md  shd_block.md  shd_stack.md
docs/utils/: README.md  shd_idutils.md
include/onx/mem/: onx_stack.h
include/shd/: num.h  shd.h  shd_id.h  shd_num.h  shd_type.h  type.h
include/shd/handler/: logger.h  shd_logger.h  vulkan.h
include/shd/mem/: shd_stack.h  stack.h
include/shd/utils/: handler.h  hndimpl.h
include/shemodogan/: shd_core.h  shd_num.h
include/shemodogan/mem/: shd_block.h  shd_mem.h  shd_stack.h
include/shemodogan/utils/: shd_idutils.h
src/: CMakeLists.txt  build.rs  shd.c
src/c/: shd.c  shd_core.c
src/c/handler/: logger.c  shd_logger.c  vulkan.c
test/: CMakeLists.txt
test/benchmark/: logger_size.c  logger_speed.c
test/handler/: test_logger.c
test/impl/: shd_enums.c
test/unit/: logger.c  shd.c  stack.c  vulkan.c
tests/: CMakeLists.txt  unit_mem_sbblock.c
tests/mem/: test_stack.c
