[package]
name = "shemodogan"
version = "0.0.1"
edition = "2021"

authors = ["CodeCin523 <155215757+CodeCin523@users.noreply.github.com>"]
description = "Shemodogan is a handy framework for quickly setting up Vulkan-based projects. It helps streamline the boring parts like initialization and management, so you can jump straight into development."

repository = "https://github.com/CodeCin523/Shemodogan"
readme = "README.md"

license = "MIT"
license-file = "LICENSE.md"

keywords = ["vulkan", "graphics", "ffi", "engine"]
categories = ["graphics"]

build = "src/build.rs"

[lib]
path = "src/rs/lib.rs"
crate-type = ["lib"]

[dependencies]
libc = "0.2"
ash = { version = "0.38", default-features = false } # raw Vulkan handles if needed

[build-dependencies]
cmake = "0.1"
bindgen = "0.69"
